#######################################

Summary
    Small bug fixes

New Examples
    range_view demonstrates use of a view: a non-owning wrapper for an iterator range with a container-like interface

Bug Fixes
    copy_if now copies in a user provided stream instead of a default_stream
    {min,max,minmax}_element can now accept raw device pointer with device execution policy

#######################################
#           Thrust v1.8.2             #
#######################################

Summary
    Small bug fixes

Bug Fixes
    Avoid warnings and errors concerning user functions called from __host__ __device__ functions
    #632 CUDA set_intersection_by_key error
    #651 thrust::copy between host & device is not interoperable with thrust::cuda::par.on(stream)
    #664 CUDA for_each ignores execution policy's stream

Known Issues
    #628 CUDA's reduce_by_key fails on sm_50 devices

#######################################
#           Thrust v1.8.1             #
#######################################

Summary
    Small bug fixes

Bug Fixes
    #615 CUDA for_each accesses illegal memory locations when given a large range
    #620 CUDA's reduce_by_key fails on large input

Known Issues
    #628 CUDA's reduce_by_key fails on sm_50 devices

#######################################
#           Thrust v1.8.0             #
#######################################

Summary
    Thrust 1.8.0 introduces support for algorithm invocation from CUDA __device__ code, support for CUDA streams,
    and algorithm performance improvements. Users may now invoke Thrust algorithms from CUDA __device__ code,
    providing a parallel algorithms library to CUDA programmers authoring custom kernels, as well as allowing
    Thrust programmers to nest their algorithm calls within functors. The thrust::seq execution policy
    allows users to require sequential algorithm execution in the calling thread and makes a