@@ -58,7 +58,7 @@ __host__ __device__
   //   TemporaryType = OutputIterator::value_type
   //
   // XXX upon c++0x, TemporaryType needs to be:
-  // result_of<UnaryFunction>::type
+  // result_of_adaptable_function<UnaryFunction>::type
 
   typedef typename thrust::detail::eval_if<
     thrust::detail::has_result_type<UnaryFunction>::value,
@@ -102,7 +102,7 @@ __host__ __device__
   //   TemporaryType = OutputIterator::value_type
   //
   // XXX upon c++0x, TemporaryType needs to be:
-  // result_of<UnaryFunction>::type
+  // result_of_adaptable_function<UnaryFunction>::type
 
   typedef typename thrust::detail::eval_if<
     thrust::detail::has_result_type<UnaryFunction>::value,
