@@ -61,7 +61,7 @@ __host__ __device__
   //   TemporaryType = OutputIterator::value_type
   //
   // XXX upon c++0x, TemporaryType needs to be:
-  // result_of<BinaryFunction>::type
+  // result_of_adaptable_function<BinaryFunction>::type
   
   using namespace thrust::detail;
 
@@ -119,7 +119,7 @@ __host__ __device__
   //   TemporaryType = OutputIterator::value_type
   //
   // XXX upon c++0x, TemporaryType needs to be:
-  // result_of<BinaryFunction>::type
+  // result_of_adaptable_function<BinaryFunction>::type
 
   using namespace thrust::detail;
 
